MFX-11 README